Add type attribute to picture element

--- a/html/about.html
+++ b/html/about.html
@@ -38,7 +38,7 @@
             <h1>Om mig</h1>
             <figure>
                 <picture>
-                    <source srcset="../images/portrait.avif">
+                    <source srcset="../images/portrait.avif" type="image/avif">
                     <img src="../images/portrait.png" width="350"  height="350" fetchpriority="high" alt="Porträttbild">
                 </picture>
                 <figcaption>Porträttbild</figcaption>
