--- a/html/images.html
+++ b/html/images.html
@@ -40,7 +40,7 @@
                 <div class="flex-images">
                     <figure class="img-container aspect-ratio-1">
                         <picture>
-                            <source srcset="../images/bildserie001org.avif">
+                            <source srcset="../images/bildserie001org.avif" type="image/avif">
                             <img src="../images/bildserie001org.jpg" width="500" height="500" fetchpriority="high"
                                 alt="En berggrund täckt med grönska och en grön äng under en ljusblå himmel med vita moln">
                         </picture>
@@ -48,7 +48,7 @@
                     </figure>
                     <figure class="img-container aspect-ratio-1">
                         <picture>
-                            <source srcset="../images/bildserie001.avif">
+                            <source srcset="../images/bildserie001.avif" type="image/avif">
                             <img src="../images/bildserie001.jpg" width="500" height="500" fetchpriority="high"
                                 alt="En berggrund täckt med grönska och en grön äng under en ljusblå himmel med vita moln">
                         </picture>
@@ -66,7 +66,7 @@
                 <div class="flex-images">
                     <figure class="img-container aspect-ratio-2">
                         <picture>
-                            <source srcset="../images/bildserie002org-cropped.avif">
+                            <source srcset="../images/bildserie002org-cropped.avif" type="image/avif">
                             <img src="../images/bildserie002org.jpg" width="500" height="500"
                                 alt="En byggnad under en klarblå himmel" loading="lazy">
                         </picture>
@@ -74,8 +74,8 @@
                     </figure>
                     <figure class="img-container aspect-ratio-2">
                         <picture>
-                            <source media="(min-width:520px)" srcset="../images/bildserie002.avif">
-                            <source media="(max-width:520px)" srcset="../images/bildserie002-cropped.avif">
+                            <source media="(min-width:520px)" srcset="../images/bildserie002.avif" type="image/avif">
+                            <source media="(max-width:520px)" srcset="../images/bildserie002-cropped.avif" type="image/avif">
                             <img src="../images/bildserie002.jpg" width="500" height="500"
                                 alt="En byggnad under en klarblå himmel" loading="lazy">
                         </picture>
@@ -91,7 +91,7 @@
                 <div class="flex-images">
                     <figure class="img-container aspect-ratio-3">
                         <picture>
-                            <source srcset="../images/bildserie003org.avif">
+                            <source srcset="../images/bildserie003org.avif" type="image/avif">
                             <img src="../images/bildserie003org.jpg" width="500" height="500"
                                 alt="Tre person som klättrar på ett berg" loading="lazy">
                         </picture>
@@ -99,7 +99,7 @@
                     </figure>
                     <figure class="img-container aspect-ratio-3">
                         <picture>
-                            <source srcset="../images/bildserie003.avif">
+                            <source srcset="../images/bildserie003.avif" type="image/avif">
                             <img src="../images/bildserie003.jpg" width="500" height="500"
                                 alt="Tre person som klättrar på ett berg" loading="lazy">
                         </picture>
