--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <h1>Hero bild</h1>
             <figure>
                 <picture>
-                    <source media="(min-width: 1440px)" srcset="images/header-large.avif">
-                    <source media="(min-width: 768px)" srcset="images/header-medium.avif">
-                    <source media="(max-width: 768px)" srcset="images/header-small.avif">
+                    <source media="(min-width: 1440px)" srcset="images/header-large.avif" type="image/avif">
+                    <source media="(min-width: 768px)" srcset="images/header-medium.avif" type="image/avif">
+                    <source media="(max-width: 768px)" srcset="images/header-small.avif" type="image/avif">
                     <img src="images/images/header.png" width="1200" height="433" alt="" fetchpriority="high">
                 </picture>
             </figure>
@@ -53,7 +53,7 @@
             <div class="img-main-container">
                 <figure class="img-container aspect-ratio-1">
                     <picture>
-                        <source srcset="images/bildserie001.avif">
+                        <source srcset="images/bildserie001.avif" type="image/avif">
                         <img src="images/bildserie001.jpg" height="500" width="500" loading="lazy"
                             alt="En berggrund täckt med grönska och en grön äng under en ljusblå himmel med vita moln">
                     </picture>
@@ -61,7 +61,7 @@
                 </figure>
                 <figure class="img-container aspect-ratio-2">
                     <picture>
-                        <source srcset="images/bildserie002-cropped.avif">
+                        <source srcset="images/bildserie002-cropped.avif" type="image/avif">
                         <img src="images/bildserie002.jpg" height="500" width="500" loading="lazy"
                             alt="En byggnad under en klarblå himmel">
                     </picture>
@@ -69,7 +69,7 @@
                 </figure>
                 <figure class="img-container aspect-ratio-3">
                     <picture>
-                        <source srcset="images/bildserie003.avif">
+                        <source srcset="images/bildserie003.avif" type="image/avif">
                         <img src="images/bildserie003.jpg" height="500" width="500" loading="lazy"
                             alt="Tre person som klättrar på ett berg">
                     </picture>
